--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -73,5 +73,90 @@ window.addEventListener('DOMContentLoaded', function() {
             </ul>
         </div>
         </div>
-        <!-- /.container -->
+
+
+
+        <div class="navbar-menus">
+
+        <ul class="header-top-menu">
+                    <li><a href="https://portworx.com/blog/">Blog</a></li><li><a href="http://go.portworx.com/request_a_demo.html">Request a demo</a></li>                </ul>
+
+            <!-- The WordPress Menu goes here -->
+            <form method="get" id="searchform" action="https://portworx.com/" role="search" class="navbar-form pull-right hidden-xs hidden-sm hidden-md">
+	<div class="form-group">
+		<div id="input_container">
+			<input type="text" class="form-control header-form input-sm" name="s" id="s" placeholder="SEARCH">
+			<img src="https://portworx.com/wp-content/themes/portworx/images/icons/search.png" id="input_img">
+		</div>
+	</div>
+</form>
+            <div id="top-nav" class="collapse navbar-collapse"><ul id="main-menu" class="nav navbar-nav navbar-right">
+                        <a href="#" onclick="return false" class="hidden-lg hidden-xl hidden-xxl">
+                            <span class="navbar-toggle material-icons mobile-close pull-right" data-toggle="collapse" data-target="#top-nav"></span>
+                        </a>
+                        <br class="hidden-xxl hidden-xl hidden-lg">
+                        <br class="hidden-xxl hidden-xl hidden-lg">
+                        <br class="hidden-xxl hidden-xl hidden-lg">
+                        <li id="menu-item-2261" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children nav-item menu-item-2261 dropdown"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Products </a>
+<ul role="menu" class=" dropdown-menu">
+	<li id="menu-item-2022" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-2022"><a href="https://portworx.com/products/introduction/" class="nav-link">Introduction</a></li>
+	<li id="menu-item-2023" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-2023"><a href="https://portworx.com/products/features/" class="nav-link">Features</a></li>
+	<li id="menu-item-2024" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-2024"><a href="https://portworx.com/products/getting-started/" class="nav-link">Getting Started</a></li>
+</ul>
+</li>
+<li id="menu-item-2007" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children nav-item menu-item-2007 dropdown"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Use Cases </a>
+<ul role="menu" class=" dropdown-menu">
+	<li id="menu-item-2005" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-2005"><a href="https://portworx.com/use-case/databases/" class="nav-link">Databases</a></li>
+	<li id="menu-item-2004" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-2004"><a href="https://portworx.com/use-case/cicd/" class="nav-link">CI/CD</a></li>
+	<li id="menu-item-2003" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-2003"><a href="https://portworx.com/use-case/big-data/" class="nav-link">Big Data</a></li>
+	<li id="menu-item-2002" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-2002"><a href="https://portworx.com/use-case/cms/" class="nav-link">Content Management</a></li>
+	<li id="menu-item-2994" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-2994"><a href="https://portworx.com/use-case/cassandra-docker-container/" class="nav-link">Cassandra</a></li>
+	<li id="menu-item-3092" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-3092"><a href="https://portworx.com/use-case/persistent-storage-dcos/" class="nav-link">DC/OS</a></li>
+</ul>
+</li>
+<li id="menu-item-69" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-69"><a href="https://portworx.com/resources/" class="nav-link">Resources</a></li>
+<li id="menu-item-2006" class="menu-item menu-item-type-custom menu-item-object-custom nav-item menu-item-2006"><a target="_blank" href="https://docs.portworx.com/" class="nav-link">Install &amp; Docs</a></li>
+<li id="menu-item-1002" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children nav-item menu-item-1002 dropdown"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">News &amp; Events </a>
+<ul role="menu" class=" dropdown-menu">
+	<li id="menu-item-296" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-296"><a href="https://portworx.com/news/" class="nav-link">In the News</a></li>
+	<li id="menu-item-375" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-375"><a href="https://portworx.com/press-releases/" class="nav-link">Press Releases</a></li>
+	<li id="menu-item-292" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-292"><a href="https://portworx.com/events/" class="nav-link">Events</a></li>
+</ul>
+</li>
+<li id="menu-item-288" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children nav-item menu-item-288 dropdown"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle">Company </a>
+<ul role="menu" class=" dropdown-menu">
+	<li id="menu-item-289" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-289"><a href="https://portworx.com/about-us/" class="nav-link">About Us</a></li>
+	<li id="menu-item-290" class="menu-item menu-item-type-custom menu-item-object-custom nav-item menu-item-290"><a href="/about-us#team" class="nav-link">Team</a></li>
+	<li id="menu-item-291" class="menu-item menu-item-type-custom menu-item-object-custom nav-item menu-item-291"><a href="/about-us#board-of-directors" class="nav-link">Leadership and Investors</a></li>
+	<li id="menu-item-293" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-293"><a href="https://portworx.com/careers/" class="nav-link">Careers</a></li>
+	<li id="menu-item-294" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-294"><a href="https://portworx.com/contact-us/" class="nav-link">Contact Us</a></li>
+	<li id="menu-item-295" class="menu-item menu-item-type-post_type menu-item-object-page nav-item menu-item-295"><a href="https://portworx.com/blog/" class="nav-link">Blog</a></li>
+</ul>
+</li>
+
+                        <div class="hidden-xxl hidden-xl hidden-lg centered">
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <hr>
+                            <br>
+                            <br>
+                            <a href="https://www.linkedin.com/company/portworx" target="blank">
+                                <img src="https://portworx.com/wp-content/themes/portworx/images/icons/Linkedin-orange.png" class="header-social">
+                            </a>
+                            <a href="https://twitter.com/portwx" target="blank">
+                                <img src="https://portworx.com/wp-content/themes/portworx/images/icons/Twitter-orange.png" class="header-social">
+                            </a>
+                            <a href="/blog">
+                                <img src="https://portworx.com/wp-content/themes/portworx/images/icons/Blog-orange.png" class="header-social">
+                            </a>
+                            <br>
+                            <br>
+                            <br>
+                        </div>
+                    </ul></div>        </div>
+    </div> <!-- .container -->
+
+
 </nav>
