Bring marketing nav more inline to main site
Todo:
 - Fix image and searchbox disappearing on certain viewports
 - mobile algolia
 - Sidebar active page is blue and doesnt auto expand
 - on mobile viewport, dropdown needs to be clicked twice
 - Bundle new included css

--- a/_sass/portworx.master.scss
+++ b/_sass/portworx.master.scss
@@ -4344,6 +4344,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   z-index: 2;
   margin-left: -1px;
 }
+.side-nav {
 .nav {
   margin-bottom: 0;
   padding-left: 0;
@@ -4387,6 +4388,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav > li > a > img {
   max-width: none;
+}
 }
 .nav-tabs {
   border-bottom: 1px solid #ddd;
@@ -8796,3 +8798,4 @@ section.pull-quote .container:after {
 		content: none;
 	}
 }
+
