--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@ layout: compress
     <!-- Content Row -->
     <div class="row">
         <!-- Sidebar Column -->
-        <div class="col-md-3">
+        <div class="col-md-3 side-nav">
           {% include sidebar.html %}
         </div>
     <!-- Content Column -->
