--- a/_sass/customstyles.scss
+++ b/_sass/customstyles.scss
@@ -374,7 +374,7 @@ a.accordion-toggle, a.accordion-collapsed {
 	}
 
 	.nav > li.active > a  {
-	background-color: #347DBE;
+	background-color: #f15a22;
 	}
 
 	.nav li a {
