Remove search in the top navigation and add one above contents

--- a/_sass/portworx.master.scss
+++ b/_sass/portworx.master.scss
@@ -8775,6 +8775,14 @@ section.pull-quote .container:after {
 }
 
 
+#algolia-search {
+    span {
+    	width: 100%;
+    }
+
+    padding-top: 40px;
+}
+
 #marketing-nav {
 	font-family: 'Libre Franklin', sans-serif;
 
