Make search input non-small, and maxwidth to sidebar to not overlap content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@ layout: compress
     <!-- Content Column -->
     <div class="col-md-9">
     	<div id="algolia-search">
-    		<input type="text" class="form-control header-form input-sm aa-input" name="s" id="s" placeholder="Search the Portworx documentation" autocomplete="off" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-labelledby="s" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
+    		<input type="text" class="form-control header-form input aa-input" name="s" id="s" placeholder="Search the Portworx documentation" autocomplete="off" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-labelledby="s" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
     	</div>
 
         {{content}}
