--- a/_sass/customstyles.scss
+++ b/_sass/customstyles.scss
@@ -391,6 +391,7 @@ a.accordion-toggle, a.accordion-collapsed {
 
 	ul#mysidebar {
 	    border-radius:0px;
+	    max-width: 100%;
 	}
 
 	.nav ul li ul li a {
