--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer>
             <div class="row">
                 <div class="col-lg-12 footer">
-              
+
+               <a href="https://github.com/portworx/px-docs/blob/gh-pages/{{ page.path }}">Edit this page on Github</a> <br/>              
                &copy;{{ site.time | date: "%Y"  }} {{site.company_name}}. All rights reserved. <br />
 {% if page.last_updated %}<span>Page last updated:</span> {{page.last_updated}}<br/>{% endif %} Site last generated: {{ site.time | date: "%b %-d, %Y"  }} <br />
 <!--<p><img src="{{ "images/company_logo.png" }}" alt="Company logo"/></p>-->
