Add Contentgroup1 to AMP docs

--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -36,6 +36,9 @@ amp: true
         <amp-analytics type="googleanalytics">
             <script type="application/json">
 {
+  "extraUrlParams": {
+    "cg1": "Docs"
+  },
   "vars": {
     "account": "UA-64247527-2"
   },
