--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -9,7 +9,7 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', '{{ site.google_analytics }}', 'auto');
-  ga('send', 'contentGroup1', 'Docs');
+  ga('send', 'contentGroup1', '{{ page.title }}');
   ga('send', 'pageview');
 
 </script>
